// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditCenter /> Rendering: Rendering: should redirect to centers page if center is successfully updated 1`] = `
<Redirect
  push={false}
  to="/centers2"
/>
`;

exports[`<EditCenter /> Rendering: Rendering: should redirect to login page if user is not authenticated 1`] = `
<Redirect
  push={false}
  to="/users/login"
/>
`;

exports[`<EditCenter /> Rendering: Rendering: should render correctly on page load 1`] = `
<div
  className="add-center-container"
>
  <UserTopNav
    dispatch={[Function]}
    isAdmin={true}
    isSuperAdmin={false}
    name="test-user"
    title="Edit Center"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        isAdmin={true}
        isSuperAdmin={false}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2"
        id="add-event-section"
      >
        <Header
          text="Edit Center"
        />
        <form
          className="mt-lg-5 mb-md-5 w-lg-50"
        >
          <LoadingIcon
            size={2}
            start={false}
          />
          <WarningAlert
            message={false}
          />
          <div
            className="form-group"
          >
            <label
              htmlFor="name"
            >
              Name
            </label>
            <input
              className="form-control"
              defaultValue="test-center"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="The name of the center"
              type="text"
            />
            <small
              className="form-text text-muted"
            >
              Less than 30 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="location"
            >
              Location
            </label>
            <input
              className="form-control"
              defaultValue="test-location"
              id="location"
              name="location"
              onChange={[Function]}
              placeholder="The location of the center"
              type="text"
            />
            <small
              className="form-text text-muted"
            >
              Less than 30 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="details"
            >
              Details
            </label>
            <textarea
              className="form-control"
              defaultValue="test-details"
              id="details"
              name="details"
              onChange={[Function]}
              placeholder="More details about the center"
              rows="7"
            />
            <small
              className="form-text text-muted"
            >
              Less than 200 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="capacity"
            >
              Capacity
            </label>
            <input
              className="form-control"
              defaultValue={200}
              id="capacity"
              name="capacity"
              onChange={[Function]}
              placeholder="How many seats"
              type="number"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="price"
            >
              Price
            </label>
            <input
              className="form-control"
              defaultValue={100}
              id="price"
              name="price"
              onChange={[Function]}
              placeholder="Price"
              type="number"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="image"
            >
              Image
            </label>
            <div
              className="text-center"
            >
              <ImageInput
                id="image"
                newImage={null}
                onDrop={[Function]}
                previousImage={null}
              />
            </div>
          </div>
          <div
            className="ml-3 pt-3"
          >
            <button
              className="btn btn-outline-dark"
              disabled={false}
              onClick={[Function]}
            >
              Update
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;

exports[`<EditCenter /> Rendering: Rendering: should render correctly when there is an error 1`] = `
<div
  className="add-center-container"
>
  <UserTopNav
    dispatch={[Function]}
    isAdmin={true}
    isSuperAdmin={false}
    name="test-user"
    title="Edit Center"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        isAdmin={true}
        isSuperAdmin={false}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2"
        id="add-event-section"
      >
        <Header
          text="Edit Center"
        />
        <form
          className="mt-lg-5 mb-md-5 w-lg-50"
        >
          <LoadingIcon
            size={2}
            start={false}
          />
          <WarningAlert
            message="there was an error"
          />
          <div
            className="form-group"
          >
            <label
              htmlFor="name"
            >
              Name
            </label>
            <input
              className="form-control"
              defaultValue="test-center"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="The name of the center"
              type="text"
            />
            <small
              className="form-text text-muted"
            >
              Less than 30 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="location"
            >
              Location
            </label>
            <input
              className="form-control"
              defaultValue="test-location"
              id="location"
              name="location"
              onChange={[Function]}
              placeholder="The location of the center"
              type="text"
            />
            <small
              className="form-text text-muted"
            >
              Less than 30 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="details"
            >
              Details
            </label>
            <textarea
              className="form-control"
              defaultValue="test-details"
              id="details"
              name="details"
              onChange={[Function]}
              placeholder="More details about the center"
              rows="7"
            />
            <small
              className="form-text text-muted"
            >
              Less than 200 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="capacity"
            >
              Capacity
            </label>
            <input
              className="form-control"
              defaultValue={200}
              id="capacity"
              name="capacity"
              onChange={[Function]}
              placeholder="How many seats"
              type="number"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="price"
            >
              Price
            </label>
            <input
              className="form-control"
              defaultValue={100}
              id="price"
              name="price"
              onChange={[Function]}
              placeholder="Price"
              type="number"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="image"
            >
              Image
            </label>
            <div
              className="text-center"
            >
              <ImageInput
                id="image"
                newImage={null}
                onDrop={[Function]}
                previousImage={null}
              />
            </div>
          </div>
          <div
            className="ml-3 pt-3"
          >
            <button
              className="btn btn-outline-dark"
              disabled={false}
              onClick={[Function]}
            >
              Update
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;

exports[`<EditCenter /> Rendering: Rendering: should render correcty when updating 1`] = `
<div
  className="add-center-container"
>
  <UserTopNav
    dispatch={[Function]}
    isAdmin={true}
    isSuperAdmin={false}
    name="test-user"
    title="Edit Center"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        isAdmin={true}
        isSuperAdmin={false}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2"
        id="add-event-section"
      >
        <Header
          text="Edit Center"
        />
        <form
          className="mt-lg-5 mb-md-5 w-lg-50"
        >
          <LoadingIcon
            size={2}
            start={true}
          />
          <WarningAlert
            message={false}
          />
          <div
            className="form-group"
          >
            <label
              htmlFor="name"
            >
              Name
            </label>
            <input
              className="form-control"
              defaultValue="test-center"
              id="name"
              name="name"
              onChange={[Function]}
              placeholder="The name of the center"
              type="text"
            />
            <small
              className="form-text text-muted"
            >
              Less than 30 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="location"
            >
              Location
            </label>
            <input
              className="form-control"
              defaultValue="test-location"
              id="location"
              name="location"
              onChange={[Function]}
              placeholder="The location of the center"
              type="text"
            />
            <small
              className="form-text text-muted"
            >
              Less than 30 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="details"
            >
              Details
            </label>
            <textarea
              className="form-control"
              defaultValue="test-details"
              id="details"
              name="details"
              onChange={[Function]}
              placeholder="More details about the center"
              rows="7"
            />
            <small
              className="form-text text-muted"
            >
              Less than 200 characters
            </small>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="capacity"
            >
              Capacity
            </label>
            <input
              className="form-control"
              defaultValue={200}
              id="capacity"
              name="capacity"
              onChange={[Function]}
              placeholder="How many seats"
              type="number"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="price"
            >
              Price
            </label>
            <input
              className="form-control"
              defaultValue={100}
              id="price"
              name="price"
              onChange={[Function]}
              placeholder="Price"
              type="number"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="image"
            >
              Image
            </label>
            <div
              className="text-center"
            >
              <ImageInput
                id="image"
                newImage={null}
                onDrop={[Function]}
                previousImage={null}
              />
            </div>
          </div>
          <div
            className="ml-3 pt-3"
          >
            <button
              className="btn btn-outline-dark"
              disabled={true}
              onClick={[Function]}
            >
              Update
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;
